--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,8 @@
 <html>
 <head>
 <title>Headto</title>
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
 <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
 
 <style>
@@ -104,31 +106,34 @@ p {
 <style>
 
 .loading {
-    position: absolute;
-    top: 12px;
-	left: 360px;	
+  position: absolute;
+  top: 12px;
+	left: 730px;	
 	width: 20px;
 	height: 20px;
 	border-style: solid;
 	border-radius: 20px;				
 	border-width: 5px;
-    border-color: green white green white;
+  border-color: green white green white;
 	-webkit-animation: revolve 1s linear infinite; 
 	-moz-animation: revolve 1s linear infinite;
 	animation: revolve 1s linear infinite; /* IE10+ */  
 }
+
 @-webkit-keyframes revolve  
 {  
 	from { -webkit-transform: rotate(0deg); }  
 	50%  { -webkit-transform: rotate(180deg); }  
 	to   { -webkit-transform: rotate(360deg); }  
 }
+
 @-moz-keyframes revolve  
 {  
 	from { -moz-transform: rotate(0deg); }  
 	50%  { -moz-transform: rotate(180deg); }  
 	to   { -moz-transform: rotate(360deg); }  
 }
+
 @keyframes revolve  /* IE10+ */
 {  
 	from { transform: rotate(0deg); }  
@@ -141,7 +146,29 @@ p {
 
 <body>
 
-<div class="container">
+<div id="fb-root"></div>
+<script type="text/javascript">
+
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : 479332218823511,        // App ID
+      status     : true,           // check login status
+      cookie     : true,           // enable cookies to allow the server to access the session
+      xfbml      : false            // parse page for xfbml or html5 social plugins like login button below
+    });
+  };
+
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/all.js";
+     fjs.parentNode.insertBefore(js, fjs);
+ }(document, 'script', 'facebook-jssdk'));
+
+</script>
+
+<div class="container text-center">
 <h1 class="title"><a href="/">Headto</a></h1>
 <p>Tell your friends where you are heading.</p>
 
@@ -183,13 +210,87 @@ function renderContent(loc) {
   result += '<div>';
   result += '<strong>' + loc.categories[0].name + '</strong>';
   result += '<p>' + loc.location.address + ', ' + loc.location.city + '.</p>';
-  result += '<p><a class="btn btn-lg btn-primary">I\'m heading here</a></p>';
+  result += '<p><a class="btn btn-lg btn-primary" id="postHeadto">I\'m heading here</a></p>';
   result += '</div>';
   result += '<img src="//a.tiles.mapbox.com/v3/paramaggarwal.map-mkz04dpf/pin-m-star';
   result += '(' + loc.location.lng + ',' + loc.location.lat + ')';
   result += '/' + loc.location.lng + ',' + loc.location.lat + ',14/400x200.png">';
 
   $(".result").html(result);
+
+  $('#postHeadto').click(function() {
+    postHeadto(loc.id);
+  });
+
+}
+
+function postHeadto(venueID) {
+  alert("Ready to post! ID: " + venueID);
+
+  FB.getLoginStatus(function(response) {
+      if (response.status === 'connected') {
+        // the user is logged in and has authenticated your
+        // app, and response.authResponse supplies
+        // the user's ID, a valid access token, a signed
+        // request, and the time the access token 
+        // and signed request each expire
+        // var uid = response.authResponse.userID;
+        // var accessToken = response.authResponse.accessToken;
+        console.log("User is already logged in, posting to Facebook");
+        postGraphAction(venueID);
+
+      } else if (response.status === 'not_authorized') {
+        // the user is logged in to Facebook, 
+        // but has not authenticated your app
+        FB.login(function(response) {
+         if (response.authResponse) {
+           console.log('Welcome!  Fetching your information.... ');
+           FB.api('/me', function(response) {
+             console.log('Good to see you, ' + response.name + '.');
+           });
+           postGraphAction(venueID);
+         } else {
+           console.log('User cancelled login or did not fully authorize.');
+         }
+       }, {scope: 'email, publish_actions'});
+      } else {
+        // the user isn't logged in to Facebook.
+        FB.login(function(response) {
+         if (response.authResponse) {
+           console.log('Welcome!  Fetching your information.... ');
+           FB.api('/me', function(response) {
+             console.log('Good to see you, ' + response.name + '.');
+             postGraphAction(venueID);
+           });
+         } else {
+           console.log('User cancelled login or did not fully authorize.');
+         }
+       }, {scope: 'email, publish_actions'});
+      }
+    });
+}
+
+function postGraphAction(venueID) {
+  var venueURL = "/venue/" + venueID;
+
+  FB.api(
+    'me/headtoapp:head_to',
+    'post',
+    {
+      venue: venueURL,
+      expires_in : 4*60*60
+    },
+    function(response) {
+      if (!response) {
+       console.log('Error occurred.');
+     } else if (response.error) {
+       console.log('Error: ' + response.error.message);
+     } else {
+       console.log('<a href=\"https://www.facebook.com/me/activity/' + response.id + '\">' +
+         'Story created.  ID is ' + response.id + '</a>');
+       window.location.assign("https://www.facebook.com/me/activity/" + response.id)
+     }
+   });
 }
 
 $(document).ready(function() {
@@ -228,7 +329,6 @@ $(document).ready(function() {
       $("input.typeahead").val(e.state.name);
     }
   });
-
 
 });
 
